ontol/ontol-compiler/test-cases/error/parser/def3.on
def @hello world() // ERROR modifier not recognized in this context
